--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Privacy Policy</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 0 15px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Privacy Policy for [Your App Name]</h1>
-    <p><strong>Last updated:</strong> October 7, 2025</p>
+Privacy Policy for com.lmbrothers.flashlightplus
+Last Updated: October 7, 2025
 
-    <h2>1. Information We Collect</h2>
-    <p>
-        We collect information that you provide directly to us, such as...
-        </p>
+This privacy policy outlines the practices for our mobile application, [Your App Name]. Your privacy is important to us, and we are committed to protecting it.
 
-    <h2>2. How We Use Your Information</h2>
-    <p>
-        We use the information we collect to operate, maintain, and provide...
-        </p>
-</body>
-</html>
+Information We Collect
+We want to be crystal clear: **our application does not collect, store, or transmit any personally identifiable information (PII) about you.** We do not require you to create an account, and we do not have access to any personal data on your device.
+
+Third-Party Service Providers (Advertising)
+Our application is supported by ads from Google AdMob. To display these ads, Google may collect certain data to provide personalized advertising. This data may include:
+
+Device information, such as your device's advertising ID.
+General location information (e.g., country or city).
+Information about your interactions with the ads shown in our app.
+This data is collected and managed directly by Google. We do not have access to this information. We encourage you to review Google's policies to understand how they handle your data:
+
+Google Privacy Policy
+How Google uses data when you use our partners' sites or apps
+Permissions
+Our app may request the `INTERNET` permission on your device. This is required solely for the purpose of loading and displaying advertisements from Google AdMob.
+
+Children's Privacy
+Our services are not intended for anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to take necessary actions.
+
+Changes to This Privacy Policy
+We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.
+
+Contact Us
+If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: lmbrothers30@gmail.com
