--- a/index.html
+++ b/index.html
@@ -1,29 +1,101 @@
-Privacy Policy for com.lmbrothers.flashlightplus
-Last Updated: October 7, 2025
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Flashlight Plus</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        /* Simple styling for the main content sections */
+        .content-section h2 {
+            font-size: 1.5rem; /* 24px */
+            font-weight: 600;
+            margin-top: 2rem; /* 32px */
+            margin-bottom: 1rem; /* 16px */
+            border-bottom: 1px solid #e5e7eb; /* gray-200 */
+            padding-bottom: 0.5rem; /* 8px */
+        }
+        .content-section p, .content-section ul {
+            margin-bottom: 1rem; /* 16px */
+            line-height: 1.75;
+            color: #4b5563; /* gray-600 */
+        }
+        .content-section ul {
+            list-style-type: disc;
+            padding-left: 1.5rem; /* 24px */
+        }
+        .content-section a {
+            color: #3b82f6; /* blue-500 */
+            text-decoration: none;
+        }
+        .content-section a:hover {
+            text-decoration: underline;
+        }
+        .content-section strong {
+            color: #1f2937; /* gray-800 */
+        }
+    </style>
+</head>
+<body class="bg-gray-50 text-gray-800">
 
-This privacy policy outlines the practices for our mobile application, [Your App Name]. Your privacy is important to us, and we are committed to protecting it.
+    <div class="container mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-8 sm:py-12">
+        <!-- Header Section -->
+        <header class="text-center mb-8">
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-900">Privacy Policy for Flashlight Plus</h1>
+            <p class="text-sm text-gray-500 mt-2">Last Updated: October 7, 2025</p>
+        </header>
 
-Information We Collect
-We want to be crystal clear: **our application does not collect, store, or transmit any personally identifiable information (PII) about you.** We do not require you to create an account, and we do not have access to any personal data on your device.
+        <!-- Main Content Wrapper -->
+        <main class="bg-white p-6 sm:p-8 rounded-lg shadow-md">
+            <div class="content-section">
+                <p class="text-lg">This privacy policy outlines the practices for our mobile application, <strong>Flashlight Plus</strong>. Your privacy is important to us, and we are committed to protecting it.</p>
 
-Third-Party Service Providers (Advertising)
-Our application is supported by ads from Google AdMob. To display these ads, Google may collect certain data to provide personalized advertising. This data may include:
+                <!-- Information We Collect -->
+                <h2>Information We Collect</h2>
+                <p>We want to be crystal clear: <strong>our application does not collect, store, or transmit any personally identifiable information (PII) about you.</strong> We do not require you to create an account, and we do not have access to any personal data on your device.</p>
 
-Device information, such as your device's advertising ID.
-General location information (e.g., country or city).
-Information about your interactions with the ads shown in our app.
-This data is collected and managed directly by Google. We do not have access to this information. We encourage you to review Google's policies to understand how they handle your data:
+                <!-- Third-Party Service Providers -->
+                <h2>Third-Party Service Providers (Advertising)</h2>
+                <p>Our application is supported by ads from Google AdMob. To display these ads, Google may collect certain data to provide personalized advertising. This data may include:</p>
+                <ul>
+                    <li>Device information, such as your device's advertising ID.</li>
+                    <li>General location information (e.g., country or city).</li>
+                    <li>Information about your interactions with the ads shown in our app.</li>
+                </ul>
+                <p>This data is collected and managed directly by Google. We do not have access to this information. We encourage you to review Google's policies to understand how they handle your data:</p>
+                <ul>
+                    <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Google Privacy Policy</a></li>
+                    <li><a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer">How Google uses data when you use our partners' sites or apps</a></li>
+                </ul>
 
-Google Privacy Policy
-How Google uses data when you use our partners' sites or apps
-Permissions
-Our app may request the `INTERNET` permission on your device. This is required solely for the purpose of loading and displaying advertisements from Google AdMob.
+                <!-- Permissions -->
+                <h2>Permissions</h2>
+                <p>Our app may request the <code>INTERNET</code> permission on your device. This is required solely for the purpose of loading and displaying advertisements from Google AdMob.</p>
 
-Children's Privacy
-Our services are not intended for anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to take necessary actions.
+                <!-- Children's Privacy -->
+                <h2>Children's Privacy</h2>
+                <p>Our services are not intended for anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to take necessary actions.</p>
 
-Changes to This Privacy Policy
-We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.
+                <!-- Changes to This Privacy Policy -->
+                <h2>Changes to This Privacy Policy</h2>
+                <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 
-Contact Us
-If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: lmbrothers30@gmail.com
+                <!-- Contact Us -->
+                <h2>Contact Us</h2>
+                <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at: <a href="mailto:lmbrothers30@gmail.com">lmbrothers30@gmail.com</a></p>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center mt-8">
+            <p class="text-sm text-gray-500">&copy; 2025 com.lmbrothers.flashlightplus. All rights reserved.</p>
+        </footer>
+
+    </div>
+
+</body>
+</html>
