Update privacy policy title and application name

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <div class="container mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 py-8 sm:py-12">
         <!-- Header Section -->
         <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-gray-900">Privacy Policy for Flashlight Plus</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-900">Privacy Policy </h1>
             <p class="text-sm text-gray-500 mt-2">Last Updated: October 7, 2025</p>
         </header>
 
         <!-- Main Content Wrapper -->
         <main class="bg-white p-6 sm:p-8 rounded-lg shadow-md">
             <div class="content-section">
-                <p class="text-lg">This privacy policy outlines the practices for our mobile application, <strong>Flashlight Plus</strong>. Your privacy is important to us, and we are committed to protecting it.</p>
+                <p class="text-lg">This privacy policy outlines the practices for our mobile applications. Your privacy is important to us, and we are committed to protecting it.</p>
 
                 <!-- Information We Collect -->
                 <h2>Information We Collect</h2>
@@ -88,7 +88,7 @@
 
         <!-- Footer -->
         <footer class="text-center mt-8">
-            <p class="text-sm text-gray-500">&copy; 2025 com.lmbrothers.flashlightplus. All rights reserved.</p>
+            <p class="text-sm text-gray-500">&copy; 2025 com.lmbrothers All rights reserved.</p>
         </footer>
 
     </div>
